--- a/views/login.jade
+++ b/views/login.jade
@@ -7,7 +7,7 @@ block content
                 h2 Login
                 form(method="post", action="/users/auth")
                     div(class="input-field col s12")
-                        input(type="text", class="validate", name="user", placeholder="Usuario:")
+                        input(type="text", class="validate", name="username", placeholder="Usuario:")
                     div(class="input-field col s12")
                         input(type="password", class="validate", name="password", placeholder="Senha:")
                     div(class="input-field col s12")
