--- a/views/new_task.jade
+++ b/views/new_task.jade
@@ -2,15 +2,19 @@ extends layout
 
 block content
     div(class="row")
-        div(class="col s6 offset-s3")
-            div(class="form-login center")
+        div(class="col s7 offset-s2")
+            div(class="panel center")
+                a(href="/tasks") List of tasks
+    div(class="row")
+        div(class="col s7 offset-s2")
+            div(class="form center")
                 h2 New Task
                 form(method="post", action="/tasks")
                     div(class="input-field col s12")
                         input(type="text", class="validate", name="name", placeholder="Nome da task:")
                     div(class="input-field col s12")
-                        select(name="done" class="browser-defautl")
-                            options(value="true") Yes
-                            options(value="false") No
+                        select(name="done", class="browser-default")
+                            option(value="true") Yes
+                            option(value="false") No
                     div(class="input-field col s12")
-                        button(type="submit", class="btn-flat teal") Login
+                        button(type="submit", class="btn-flat teal") Inserir
