--- a/views/tasks.jade
+++ b/views/tasks.jade
@@ -4,13 +4,31 @@ block content
     div(class="row")
         div(class="col s7 offset-s2")
             div(class="panel center")
+                a(href="/tasks/create") New Task
+    div(class="row")
+        div(class="col s7 offset-s2")
+            div(class="panel center")
                 h2 List of tasks
                 table
                     thead
                         tr
+                            th #
                             th Name
                             th Done
+                            th Delete
+                            th Edit
+                            th View
                     tbody
-                        tr
-                            td task1
-                            td true
+                        each task in tasks
+                            tr
+                                td=task.id
+                                td=task.name
+                                td=task.done
+                                td
+                                    form(method="post", action="/tasks/" + task.id)
+                                        input(type="hidden", name="_method", value="DELETE")
+                                        input(type="submit", class="btn-flat red", value="Delete")
+                                td
+                                    a(href="/tasks/edit/" + task.id, class="btn-flat green") Edit
+                                td
+                                    a(href="/tasks/" + task.id, class="btn-flat green") View
